# michizane_kun_chatbot

./: .env  .gitignore  README.md  app.py  cert.pem  generate_cert.py  key.pem  mypy.ini  pyproject.toml  requirements.txt
main_py/: mini_runner.py
modules/: gemini_handler.py  spreadsheet_handler.py  test_gemini_handler.py
